# Asteroids

./: .clang-format  .gitignore  .gitmodules  Asteroids.code-workspace  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
core/: .clang-format  CMakeLists.txt
core/assets/shaders/opengl/: sprite.frag  sprite.vert
core/cmake/: assets-common.cmake  assets-shaders.cmake  assets.cmake
core/include/: event.hpp  game.hpp  manager.hpp  renderer.hpp  scene.hpp  time.hpp
core/include/assets/: asset-inventory.hpp  assets.hpp  mesh.hpp  model.hpp  texture.hpp
core/include/assets/loaders/: obj.hpp
core/include/core/: Kconfig  core.hpp  event.hpp  game.hpp  manager.hpp  time.hpp
core/include/core/assets/: Kconfig  asset-inventory.hpp  asset.hpp  font.hpp  mesh.hpp  model.hpp  shader.hpp  spriteSheet.hpp  texture.hpp  utils.hpp
core/include/core/assets/defaults/: mesh-defaults.hpp
core/include/core/assets/loaders/: obj.hpp
core/include/core/audio/: Kconfig  audio.hpp  audioClip.hpp  audioManager.hpp
core/include/core/camera/: camera.hpp  perspective-camera.hpp
core/include/core/ecs/: Kconfig  common.hpp  component.hpp  componentManager.hpp  components.hpp  ecs.hpp  entity.hpp  entityManager.hpp
core/include/core/ecs/components/: audioComponent.hpp  audioListener.hpp  cameraComponent.hpp  inputComponent.hpp  meshRenderer.hpp  renderComponent.hpp  spriteRenderer.hpp  templateComponent.hpp  textureComponent.hpp  transformComponent.hpp
core/include/core/graphics/: Kconfig  asset-manager.hpp  renderer.hpp  shader.hpp  vertex.hpp  window.hpp
core/include/core/graphics/camera/: camera.hpp
core/include/core/graphics/renderer/: asset-manager.hpp  renderer.hpp  vertex.hpp
core/include/core/input/: input-types.hpp  inputManager.hpp
core/include/core/renderer/: asset-manager.hpp  renderer.hpp  vertex.hpp
core/include/core/renderer/opengl/: gl-assetManager.hpp  gl-mesh.hpp  gl-pipeline.hpp  gl-renderer.hpp  gl-texture.hpp
core/include/core/renderer/vulkan/: vk-commandpool.hpp  vk-image.hpp  vk-imageview.hpp  vk-instance.hpp  vk-rendercontext.hpp  vk-renderer.hpp  vk-swapchain.hpp  vk-utils.hpp
core/include/core/ui/: element.hpp  label.hpp  uiManager.hpp
core/include/core/ui/text/: character.hpp  font.hpp  fontLoader.hpp
core/include/core/utils/: Kconfig  Kconfig.logging  Kconfig.queue  average.hpp  hash.hpp  json.hpp  json_impl.hpp  logging.hpp  memory.hpp  platform.hpp  profiler.hpp  queue.hpp
core/include/ecs/: components.hpp  ecs.hpp  physicsComponent.hpp  renderComponent.hpp  spriteComponent.hpp  transformComponent.hpp
core/include/ecs/components/: renderComponent.hpp
core/include/input/: inputManager.hpp
core/include/logic/: bullet.hpp  enemy.hpp  player.hpp
core/include/renderer/: asset-manager.hpp  renderer.hpp
core/include/renderer/common/: mesh.hpp  renderer.hpp  texture.hpp  vertex.hpp
core/include/renderer/opengl/: gl-mesh.hpp  gl-pipeline.hpp  gl-renderer.hpp  gl-texture.hpp
core/include/renderer/vulkan/: vk-application.hpp  vk-commandpool.hpp  vk-config.hpp  vk-context.hpp  vk-debug.hpp  vk-device.hpp  vk-image.hpp  vk-imageview.hpp  vk-instance.hpp  vk-phyiscalDevice.hpp  vk-physicalDevice.hpp  vk-rendercontext.hpp  vk-renderer.hpp  vk-renderpass.hpp  vk-shader.hpp  vk-surface.hpp  vk-swapchain.hpp  vk-utils.hpp
core/include/utils/: average.hpp  file.hpp  logging.hpp  profiler.hpp  vector.hpp
core/lib/: .gitignore
core/src/: CMakeLists.txt  game.cpp  main.cpp  renderer.cpp  time.cpp
core/src/assets/: CMakeLists.txt  asset-inventory.cpp  assets.cpp  font.cpp  font_p.hpp  mesh-defaults.hpp  mesh.cpp  model.cpp  shader.cpp  spriteSheet.cpp  texture.cpp  texture_p.hpp
core/src/assets/loaders/: obj.cpp
core/src/audio/: CMakeLists.txt  audio.cpp  audioClip.cpp  audioClip_p.hpp  audioManager.cpp  audioManager_p.hpp  audio_p.hpp
core/src/camera/: CMakeLists.txt  camera.cpp  perspective-camera.cpp
core/src/ecs/: CMakeLists.txt  component.cpp  componentManager.cpp  entity.cpp  entityManager.cpp  renderComponent.cpp  spriteComponent.cpp
core/src/ecs/components/: audioComponent.cpp  audioListener.cpp  cameraComponent.cpp  inputComponent.cpp  renderComponent.cpp  spriteRenderer.cpp  templateComponent.cpp  textureComponent.cpp  transformComponent.cpp
core/src/graphics/: CMakeLists.txt  shader.cpp  window.cpp  window_p.hpp
core/src/graphics/camera/: camera.cpp
core/src/graphics/renderer/: CMakeLists.txt
core/src/graphics/renderer/opengl/: gl-assetManager.cpp  gl-mesh.cpp  gl-pipeline.cpp  gl-renderer.cpp  gl-texture.cpp
core/src/graphics/renderer/vulkan/: vk-commandpool.cpp  vk-config.cpp  vk-context.cpp  (+13 more)
core/src/input/: CMakeLists.txt  inputManager.cpp
core/src/logic/: bullet.cpp  enemy.cpp  player.cpp
core/src/renderer/: CMakeLists.txt  renderer.cpp  texture2d.cpp
core/src/renderer/common/: mesh.cpp  renderer.cpp  texture.cpp
core/src/renderer/opengl/: gl-assetManager.cpp  gl-mesh.cpp  gl-pipeline.cpp  gl-renderer.cpp  gl-texture.cpp
core/src/renderer/sdl/: renderer.cpp  texture2d.cpp
core/src/renderer/vulkan/: renderer.cpp  vk-commandpool.cpp  vk-config.cpp  vk-context.cpp  vk-debug.cpp  vk-device.cpp  vk-image.cpp  vk-imageview.cpp  vk-instance.cpp  vk-physicalDevice.cpp  vk-rendercontext.cpp  vk-renderer.cpp  vk-renderpass.cpp  vk-shader.cpp  vk-surface.cpp  vk-swapchain.cpp  vk-utils.cpp
core/src/ui/: CMakeLists.txt  uiManager.cpp
core/src/ui/text/: font.cpp  fontLoader.cpp  fontLoader_p.hpp
core/src/utils/: CMakeLists.txt  logging.cpp
core/test/: CMakeLists.txt
core/test/unit/utils/: utQueue.cpp
examples/core/: CMakeLists.txt  utils-queue.cpp
logic/: .clang-format  CMakeLists.txt  Kconfig
logic/assets/: sources
logic/assets/audio/: sources
logic/assets/spritesheets/: asteroids-backgrounds.json
logic/assets/textures/: info.txt
logic/include/: bullet.hpp  enemy.hpp  events.hpp  player.hpp
logic/src/: bullet.cpp  enemy.cpp  main.cpp  player.cpp
references/glm/: CMakeLists.txt  glm-sample.cpp
references/opengl/: CMakeLists.txt  README.md  rendering.cpp
(+54 files in other folders)
